[package]
name = "narwhal-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.41.1", features = ["full"]}
blake3 = "1.5.4"
clap = {version = "4.5.21", features = ["derive"]}
tracing = "0.1.40"
sled = "0.34.7"
json = "0.12.4"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
anyhow = "1.0.93"
libp2p = "0.54.1"
tracing-subscriber = "0.3.18"
bincode = "1.3.3"
